--- a/src/location/LocationView.fxml
+++ b/src/location/LocationView.fxml
@@ -32,7 +32,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" text="Weiter" GridPane.columnIndex="1">
+            <Button mnemonicParsing="false" onAction="#next" text="Weiter" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets bottom="15.0" />
                </GridPane.margin>
