--- a/src/login/LoginView.fxml
+++ b/src/login/LoginView.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.paint.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -8,7 +11,7 @@
 
 <BorderPane id="sc_login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginController">
    <center>
-      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="160.0" prefWidth="600.0" BorderPane.alignment="TOP_CENTER">
+      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="210.0" prefWidth="600.0" BorderPane.alignment="TOP_CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -17,6 +20,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -60,6 +64,16 @@
                   <Insets right="15.0" />
                </GridPane.margin>
             </TextField>
+            <Button id="btn_login" fx:id="btn_login" mnemonicParsing="false" onAction="#login" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets top="15.0" />
+               </GridPane.margin>
+            </Button>
+            <Button id="btn_exit" fx:id="btn_exit" mnemonicParsing="false" onAction="#exit" text="Abbruch" textAlignment="CENTER" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets top="15.0" />
+               </GridPane.margin>
+            </Button>
          </children>
       </GridPane>
    </center>
@@ -71,19 +85,6 @@
       </Label>
    </top>
    <bottom>
-      <HBox prefHeight="38.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button id="btn_exit" fx:id="btn_exit" mnemonicParsing="false" onAction="#exit" text="Abbruch">
-               <HBox.margin>
-                  <Insets left="15.0" right="15.0" />
-               </HBox.margin>
-            </Button>
-            <Button id="btn_login" fx:id="btn_login" mnemonicParsing="false" onAction="#login" text="Login">
-               <HBox.margin>
-                  <Insets left="15.0" right="15.0" />
-               </HBox.margin>
-            </Button>
-         </children>
-      </HBox>
+      <HBox prefHeight="38.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
    </bottom>
 </BorderPane>
