--- a/src/survey/SurveyView.fxml
+++ b/src/survey/SurveyView.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="survey.SurveyController">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
@@ -18,16 +17,17 @@
                   <Image url="@../test/img/logo_default.png" />
                </image>
             </ImageView>
-            <ProgressBar layoutX="100.0" layoutY="15.0" prefHeight="25.0" prefWidth="159.0" progress="0.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="15.0" />
-            <Label alignment="CENTER" layoutX="270.0" layoutY="48.0" text="Frage xx/xx" textAlignment="CENTER" AnchorPane.leftAnchor="270.0" AnchorPane.rightAnchor="270.0" AnchorPane.topAnchor="48.0" />
-            <Label alignment="CENTER" layoutX="228.0" layoutY="73.0" prefHeight="17.0" prefWidth="144.0" text="Überschrift" textAlignment="CENTER" AnchorPane.leftAnchor="228.0" AnchorPane.rightAnchor="228.0" AnchorPane.topAnchor="73.0">
+            <ProgressBar fx:id="progressBar" layoutX="100.0" layoutY="15.0" prefHeight="25.0" prefWidth="159.0" progress="0.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="15.0" />
+            <Label fx:id="lbl_count" alignment="CENTER" layoutX="270.0" layoutY="48.0" text="Frage xx/xx" textAlignment="CENTER" AnchorPane.leftAnchor="270.0" AnchorPane.rightAnchor="270.0" AnchorPane.topAnchor="48.0" />
+            <Label fx:id="lbl_headline" alignment="CENTER" layoutX="228.0" layoutY="73.0" prefHeight="17.0" prefWidth="144.0" textAlignment="CENTER" AnchorPane.leftAnchor="228.0" AnchorPane.rightAnchor="228.0" AnchorPane.topAnchor="73.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
             <Button layoutX="14.0" layoutY="361.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="X" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" />
-            <Button layoutX="527.0" layoutY="356.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="15.0" />
-            <Button layoutX="537.0" layoutY="366.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="&lt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="80.0" />
+            <Button layoutX="527.0" layoutY="356.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#next" prefHeight="50.0" prefWidth="50.0" text="&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="15.0" />
+            <Button layoutX="537.0" layoutY="366.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#pre" prefHeight="50.0" prefWidth="50.0" text="&lt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="80.0" />
+            <VBox fx:id="vbox" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="100.0" />
          </children>
       </AnchorPane>
    </children>
