--- a/src/admin/AdminView.fxml
+++ b/src/admin/AdminView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin.AdminController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin.AdminController"> 
    <top>
       <AnchorPane prefHeight="66.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -32,10 +32,10 @@
          <children>
             <TableView fx:id="tbl_fragebogen" layoutX="136.0" layoutY="30.0" prefHeight="200.0" prefWidth="382.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="82.0" AnchorPane.rightAnchor="82.0" AnchorPane.topAnchor="30.0">
               <columns>
-                <TableColumn maxWidth="136.0" minWidth="82.0" prefWidth="119.0" text="Name" />
-                <TableColumn minWidth="50.0" prefWidth="96.5" text="Erstelldatum" />
-                  <TableColumn maxWidth="227.0" minWidth="50.0" prefWidth="142.125" text="Aktiv" />
-                  <TableColumn minWidth="20.0" prefWidth="79.0" text="Final" />
+                <TableColumn fx:id="nameCol" maxWidth="136.0" minWidth="82.0" prefWidth="119.0" text="Name" />
+                <TableColumn fx:id="dateCol" minWidth="50.0" prefWidth="96.5" text="Erstelldatum" />
+                  <TableColumn fx:id="activCol" maxWidth="227.0" minWidth="50.0" prefWidth="142.125" text="Aktiv" />
+                  <TableColumn fx:id="finalCol" minWidth="20.0" prefWidth="79.0" text="Final" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
