--- a/src/admin/AdminView.fxml
+++ b/src/admin/AdminView.fxml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin.AdminController"> 
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin.AdminController"> 
    <top>
       <AnchorPane prefHeight="66.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -14,7 +20,7 @@
             <Button layoutX="526.0" layoutY="15.0" mnemonicParsing="false" onAction="#logout" text="Logout" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
             <HBox prefHeight="47.0" prefWidth="200.0" spacing="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="15.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#exit" text="Programm beenden" textAlignment="CENTER" />
+                  <Button mnemonicParsing="false" onAction="#exit" text="X" textAlignment="CENTER" />
                   <Button fx:id="btn_loc" mnemonicParsing="false" onAction="#changeLocation">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
@@ -32,27 +38,26 @@
          </children>
       </AnchorPane>
    </top>
-   <center>
-      <AnchorPane prefHeight="173.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <TableView fx:id="tbl_fragebogen" editable="true" layoutX="136.0" layoutY="30.0" prefHeight="200.0" prefWidth="382.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="82.0" AnchorPane.rightAnchor="82.0" AnchorPane.topAnchor="30.0">
-              <columns>
-                <TableColumn fx:id="nameCol" maxWidth="136.0" minWidth="82.0" prefWidth="119.0" text="Name" />
-                <TableColumn fx:id="dateCol" minWidth="50.0" prefWidth="96.5" text="Erstelldatum" />
-                  <TableColumn fx:id="activCol" maxWidth="227.0" minWidth="50.0" prefWidth="142.125" text="Aktiv" />
-                  <TableColumn fx:id="finalCol" minWidth="20.0" prefWidth="79.0" text="Final" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-         </children>
-      </AnchorPane>
-   </center>
    <bottom>
       <AnchorPane prefHeight="48.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="79.0" layoutY="2.0" mnemonicParsing="false" onAction="#newFragebogen" text="neu" />
+            <Button layoutX="79.0" layoutY="2.0" mnemonicParsing="false" onAction="#newFragebogen" text="neu" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="79.0" />
          </children></AnchorPane>
    </bottom>
+   <center>
+      <TableView fx:id="tbl_fragebogen" editable="true" BorderPane.alignment="CENTER">
+        <columns>
+          <TableColumn fx:id="nameCol" text="Name" />
+          <TableColumn fx:id="dateCol" text="Erstelldatum" />
+            <TableColumn fx:id="activCol" text="Aktiv" />
+            <TableColumn fx:id="finalCol" text="Final" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+         <BorderPane.margin>
+            <Insets bottom="16.0" left="16.0" right="16.0" />
+         </BorderPane.margin>
+      </TableView>
+   </center>
 </BorderPane>
