--- a/src/gratitude/GratitudeView.fxml
+++ b/src/gratitude/GratitudeView.fxml
@@ -1,35 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="gratitude.GratitudeController">
-   <center>
-      <AnchorPane BorderPane.alignment="CENTER">
-         <children>
-            <ImageView fitHeight="105.0" fitWidth="166.0" layoutX="7.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0">
-               <image>
-                  <Image url="@../../bin/test/img/wanord.png" />
-               </image>
-            </ImageView>
-            <Label alignment="CENTER" layoutX="127.0" layoutY="135.0" prefHeight="56.0" prefWidth="347.0" text="Dieses Programm wurde von Schülerinnen und Schülern der Wirtschaftsakademie Nord entwickelt." textAlignment="CENTER" textFill="#542600" wrapText="true" AnchorPane.bottomAnchor="39.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="126.0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Button layoutX="281.0" layoutY="14.0" mnemonicParsing="false" onAction="#exit" text="OK">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
-   </center>
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gratitude.GratitudeController">
    <top>
       <AnchorPane prefHeight="137.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -51,4 +30,27 @@
          </children>
       </AnchorPane>
    </top>
+   <bottom>
+      <AnchorPane BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="105.0" fitWidth="166.0" layoutX="7.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0">
+               <image>
+                  <Image url="@../../bin/test/img/wanord.png" />
+               </image>
+            </ImageView>
+            <Label alignment="CENTER" layoutX="127.0" layoutY="135.0" prefHeight="56.0" prefWidth="347.0" text="Dieses Programm wurde von Schülerinnen und Schülern der Wirtschaftsakademie Nord entwickelt." textAlignment="CENTER" textFill="#542600" wrapText="true" AnchorPane.bottomAnchor="39.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="126.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </bottom>
+   <center>
+      <Button mnemonicParsing="false" onAction="#exit" text="OK" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+   </center>
 </BorderPane>
