--- a/src/question/QuestionView.fxml
+++ b/src/question/QuestionView.fxml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="question.QuestionController">
-   <top>
-      <AnchorPane prefHeight="40.0" prefWidth="600.0" BorderPane.alignment="TOP_RIGHT">
-         <children>
-            <Label fx:id="lblQuestion" alignment="CENTER" layoutX="246.0" layoutY="12.0" prefHeight="17.0" prefWidth="109.0" text="Frage Bearbeiten" AnchorPane.leftAnchor="246.0" AnchorPane.rightAnchor="245.0" AnchorPane.topAnchor="15.0" />
-         </children>
-      </AnchorPane>
-   </top>
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="question.QuestionController">
    <bottom>
       <AnchorPane prefHeight="48.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -29,93 +32,142 @@
       </AnchorPane>
    </bottom>
    <center>
-      <AnchorPane BorderPane.alignment="CENTER">
+      <HBox prefHeight="100.0" prefWidth="200.0" spacing="8.0" BorderPane.alignment="CENTER">
          <children>
-            <GridPane layoutX="14.0" layoutY="16.0" prefHeight="184.0" prefWidth="493.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="292.0" AnchorPane.topAnchor="16.0">
-              <columnConstraints>
-                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="108.0" minWidth="0.0" prefWidth="56.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="281.0" minWidth="10.0" prefWidth="225.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <VBox prefHeight="511.0" prefWidth="313.0" spacing="16.0" HBox.hgrow="ALWAYS">
                <children>
-                  <Label text="Frage:" />
-                  <Label text="Position:" GridPane.rowIndex="1" />
-                  <Label text="Kategorie:" GridPane.rowIndex="2" />
-                  <Label text="Fragenart:" GridPane.rowIndex="4" />
-                  <TextField fx:id="textFieldFE" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets left="8.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <ChoiceBox fx:id="posChoice" prefHeight="25.0" prefWidth="51.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets left="8.0" />
-                     </GridPane.margin>
-                  </ChoiceBox>
-                  <ChoiceBox fx:id="katChoice" prefHeight="25.0" prefWidth="51.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets left="8.0" />
-                     </GridPane.margin>
-                  </ChoiceBox>
-                  <Button mnemonicParsing="false" onAction="#createCategory" text="Neue Kategorie" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                     <GridPane.margin>
-                        <Insets left="8.0" />
-                     </GridPane.margin>
-                  </Button>
-                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                  <GridPane prefHeight="402.0" prefWidth="524.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="108.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="335.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="32.0" vgrow="ALWAYS" />
+                      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="28.0" vgrow="ALWAYS" />
+                      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="16.0" vgrow="ALWAYS" />
+                        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+                    </rowConstraints>
                      <children>
-                        <ChoiceBox fx:id="artChoice" prefHeight="25.0" prefWidth="133.0">
-                           <HBox.margin>
+                        <Label maxWidth="1.7976931348623157E308" text="Frage:" />
+                        <TextField fx:id="textFieldFE" maxWidth="1.7976931348623157E308" prefWidth="0.0" GridPane.columnIndex="1">
+                           <GridPane.margin>
                               <Insets left="8.0" />
-                           </HBox.margin>
+                           </GridPane.margin>
+                        </TextField>
+                        <Label maxWidth="1.7976931348623157E308" text="Position:" GridPane.rowIndex="1" />
+                        <ChoiceBox fx:id="posChoice" prefHeight="25.0" prefWidth="51.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="8.0" />
+                           </GridPane.margin>
                         </ChoiceBox>
-                        <CheckBox fx:id="chckbxUeberschrift" mnemonicParsing="false" text="Überschrift" />
+                        <Label maxWidth="1.7976931348623157E308" text="Kategorie:" GridPane.rowIndex="2" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <children>
+                              <ChoiceBox fx:id="katChoice" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="188.0" HBox.hgrow="ALWAYS" />
+                              <Button mnemonicParsing="false" onAction="#createCategory" text="Neue Kategorie" />
+                           </children>
+                           <GridPane.margin>
+                              <Insets left="8.0" />
+                           </GridPane.margin>
+                        </HBox>
+                        <Label maxWidth="1.7976931348623157E308" text="Fragenart:" GridPane.rowIndex="3" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <children>
+                              <ChoiceBox fx:id="artChoice" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="133.0" HBox.hgrow="ALWAYS">
+                                 <HBox.margin>
+                                    <Insets left="8.0" />
+                                 </HBox.margin>
+                              </ChoiceBox>
+                              <CheckBox fx:id="chckbxUeberschrift" mnemonicParsing="false" text="Überschrift" />
+                           </children>
+                        </HBox>
                      </children>
-                  </HBox>
+                  </GridPane>
+                  <FlowPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <CheckBox fx:id="chckbxTextArea" mnemonicParsing="false" text="Textarea">
+                           <FlowPane.margin>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </FlowPane.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="chckbxPflichtfrage" mnemonicParsing="false" text="Pflichtfrage">
+                           <FlowPane.margin>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </FlowPane.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="chckbxMultipleChoice" mnemonicParsing="false" text="Multiple Choice">
+                           <FlowPane.margin>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </FlowPane.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="chckbxJaNein" mnemonicParsing="false" text="ja/nein Frage">
+                           <FlowPane.margin>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </FlowPane.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="chckbxX" mnemonicParsing="false" text="einzeilig">
+                           <FlowPane.margin>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </FlowPane.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="chckbxListe" mnemonicParsing="false" text="Liste">
+                           <FlowPane.margin>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </FlowPane.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="chckbxZahl" mnemonicParsing="false" text="Zahl">
+                           <FlowPane.margin>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </FlowPane.margin>
+                        </CheckBox>
+                        <Button mnemonicParsing="false" onAction="#react" prefHeight="25.0" prefWidth="114.0" text="Frage reagiert auf">
+                           <FlowPane.margin>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </FlowPane.margin>
+                        </Button>
+                        <ChoiceBox fx:id="zahlChoice" prefWidth="150.0">
+                           <FlowPane.margin>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </FlowPane.margin>
+                        </ChoiceBox>
+                        <TextField fx:id="textFieldZahl">
+                           <FlowPane.margin>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </FlowPane.margin>
+                        </TextField>
+                     </children>
+                  </FlowPane>
                </children>
-            </GridPane>
-            <GridPane alignment="CENTER_LEFT" layoutX="14.0" layoutY="215.0" prefHeight="178.0" prefWidth="444.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="342.0" AnchorPane.topAnchor="215.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="204.0" minWidth="10.0" prefWidth="119.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.0" minWidth="8.0" prefWidth="120.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            </VBox>
+            <VBox prefHeight="512.0" prefWidth="187.0" spacing="8.0" HBox.hgrow="ALWAYS">
                <children>
-                  <CheckBox fx:id="chckbxPflichtfrage" mnemonicParsing="false" text="Pflichtfrage" />
-                  <CheckBox fx:id="chckbxMultipleChoice" mnemonicParsing="false" text="Multiple Choice" GridPane.rowIndex="1" />
-                  <CheckBox fx:id="chckbxJaNein" mnemonicParsing="false" text="ja/nein Frage" GridPane.rowIndex="2" />
-                  <CheckBox fx:id="chckbxX" mnemonicParsing="false" text="einzeilig" GridPane.rowIndex="3" />
-                  <CheckBox fx:id="chckbxListe" mnemonicParsing="false" text="Liste" GridPane.columnIndex="1" />
-                  <CheckBox fx:id="chckbxTextArea" mnemonicParsing="false" text="Textarea" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <CheckBox fx:id="chckbxZahl" mnemonicParsing="false" text="Zahl" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" onAction="#react" prefHeight="25.0" prefWidth="114.0" text="Frage reagiert auf" GridPane.rowIndex="4" />
-                  <ChoiceBox fx:id="zahlChoice" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField fx:id="textFieldZahl" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <TableView fx:id="tbl_antworten" prefHeight="200.0" prefWidth="263.0" VBox.vgrow="ALWAYS">
+                    <columns>
+                      <TableColumn fx:id="nrCol" prefWidth="58.0" text="Nr" />
+                      <TableColumn fx:id="antCol" prefWidth="215.0" text="Antwort" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+                  <Button mnemonicParsing="false" onAction="#createAnswer" text="Neue Antwort">
+                     <VBox.margin>
+                        <Insets bottom="16.0" top="16.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
-            </GridPane>
-            <TableView fx:id="tbl_antworten" layoutX="362.0" layoutY="16.0" prefHeight="200.0" prefWidth="263.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
-              <columns>
-                <TableColumn fx:id="nrCol" prefWidth="75.0" text="Nr" />
-                <TableColumn fx:id="antCol" prefWidth="75.0" text="Antwort" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-            <Button layoutX="322.0" layoutY="224.0" mnemonicParsing="false" onAction="#createAnswer" text="Neue Antwort" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="224.0" />
+            </VBox>
          </children>
-      </AnchorPane>
+         <BorderPane.margin>
+            <Insets left="16.0" right="16.0" />
+         </BorderPane.margin>
+      </HBox>
    </center>
+   <top>
+      <Label fx:id="lblQuestion" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="17.0" prefWidth="109.0" text="Frage Bearbeiten" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="8.0" top="16.0" />
+         </BorderPane.margin>
+      </Label>
+   </top>
 </BorderPane>
