--- a/src/questionList/QuestionListView.fxml
+++ b/src/questionList/QuestionListView.fxml
@@ -1,36 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="questionList.QuestionListController">
-   <top>
-      <AnchorPane prefHeight="45.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label alignment="CENTER" layoutX="255.0" layoutY="14.0" prefHeight="17.0" prefWidth="90.0" text="Fragenübersicht" AnchorPane.leftAnchor="255.0" AnchorPane.rightAnchor="255.0" AnchorPane.topAnchor="15.0" />
-         </children>
-      </AnchorPane>
-   </top>
-   <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <TableView fx:id="tbl_fragen" layoutX="88.0" layoutY="56.0" prefHeight="200.0" prefWidth="417.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="88.0" AnchorPane.rightAnchor="88.0" AnchorPane.topAnchor="55.0">
-              <columns>
-                <TableColumn fx:id="nameCol" prefWidth="100.0" text="Frage" />
-                <TableColumn fx:id="katCol" prefWidth="108.0" text="Kategorie" />
-                  <TableColumn fx:id="posCol" prefWidth="95.0" text="Position" />
-                  <TableColumn fx:id="artCol" prefWidth="82.0" text="Art" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-         </children>
-      </AnchorPane>
-   </center>
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="questionList.QuestionListController">
    <bottom>
       <AnchorPane prefHeight="44.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -39,4 +17,27 @@
          </children>
       </AnchorPane>
    </bottom>
+   <center>
+      <TableView fx:id="tbl_fragen" prefHeight="200.0" prefWidth="417.0" BorderPane.alignment="CENTER">
+        <columns>
+          <TableColumn fx:id="nameCol" prefWidth="100.0" text="Frage" />
+          <TableColumn fx:id="katCol" prefWidth="108.0" text="Kategorie" />
+            <TableColumn fx:id="posCol" prefWidth="95.0" text="Position" />
+            <TableColumn fx:id="artCol" prefWidth="82.0" text="Art" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+         <BorderPane.margin>
+            <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+         </BorderPane.margin>
+      </TableView>
+   </center>
+   <top>
+      <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="17.0" prefWidth="600.0" text="Fragenübersicht" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets top="16.0" />
+         </BorderPane.margin>
+      </Label>
+   </top>
 </BorderPane>
