--- a/src/application/application.css
+++ b/src/application/application.css
@@ -156,8 +156,8 @@
 }
 
 .button:default {
-	-fx-background-color: -swatch-500;
-	-fx-text-fill: -fx-text-button-colored;
+/* -fx-background-color: -swatch-500; */
+/* -fx-text-fill: -fx-text-button-colored;*/
 }
 
 .toggle-button:focused, .button:focused, .button:default:focused {
@@ -168,13 +168,13 @@
 	-fx-background-color: derive(-swatch-500, 50.0%),
 		derive(-swatch-500, -20.0%);
 	-fx-background-insets: 0.0, 0.2em;
-	-fx-text-fill: -fx-text-button-colored;
+ -fx-text-fill: -fx-text-button-colored;
 }
 
 .toggle-button:armed, .toggle-button:selected, .button:armed, .button:default:armed
 	{
 	-fx-background-color: -swatch-grey;
-	-fx-text-fill: -fx-text-button-colored;
+ -fx-text-fill: -fx-text-button-colored;
 }
 
 .icon-button {
